fix navigation z-index

--- a/src/Styles/navigation.css
+++ b/src/Styles/navigation.css
@@ -3,7 +3,7 @@
 	flex: 0 0 auto;
 	min-height: 1px;
 	box-sizing: border-box;
-	z-index: 2;
+	z-index: 5;
 
 	position: relative;
 }
